2002-05-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (TclMathInProgress,TclExecuteByteCode
		ExprCallMathFunc):
	* generic/tclInt.h (TclMathInProgress):
	* unix/Makefile.in (tclMtherr.*):
	* unix/configure.in (NEED_MATHERR):
	* unix/tclAppInit.c (matherr):
	* unix/tclMtherr.c (removed file):
	* win/tclWinMtherr.c (_matherr): Removed internal routine
	TclMathInProgress and Unix implementation of matherr().  These
	are now obsolete, dealing with very old versions of the C math
	library.  Windows version is retained in case Borland compilers
	require it, but it is inactive.  Thanks to Joe English.
	[Bug 474335, Patch 555635].
	* unix/configure: regen

2002-05-30  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompExpr.c:
	* generic/tclCompile.c:
	* generic/tclCompile.h: removed exprIsJustVarRef and
	exprIsComparison from the ExprInfo and CompileEnv structs. These
	were set, but not used since dec 1999 [Bug 562383].

2002-05-30  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFileName.c (TclGlob): fix to longstanding
	'knownBug' in fileName tests 15.2-15.4, and fix to a new
	Tcl 8.4 bug in certain uses of 'glob -tails'.
	* tests/fileName.test: removed 'knownBug' flag from some tests,
	added some new tests for above bugs.
	
2002-05-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: regen'ed
	* unix/configure.in: replaced bigendian check with autoconf
	standard AC_C_BIG_ENDIAN, which defined WORDS_BIGENDIAN on
	bigendian systems.
	* generic/tclUtf.c (Tcl_UniCharNcmp): 
	* generic/tclInt.h (TclUniCharNcmp): use WORDS_BIGENDIAN instead of
	TCL_OPTIMIZE_UNICODE_COMPARE to enable memcmp alternative.

	* generic/tclExecute.c (TclExecuteByteCode INST_STR_CMP):
	* generic/tclCmdMZ.c (Tcl_StringObjCmd): changed the case for
	choosing the Tcl_UniCharNcmp compare to when both objs are of
	StringType, as benchmarks show that is the optimal check (both
	bigendian and littleendian systems).
